// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzScroller with all optional props except classNames is rendering according to snapshot 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "",
      "style": "box-sizing:border-box;width:200px;height:900px;display:flex;flex-direction:column;justify-content:space-between",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "",
          "style": "overflow:auto;max-height:60%",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "style": "position:relative",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "style": "-ms-transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);transform:translate3d(0px, 0px, 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {},
                    "children": Array [],
                    "name": "div",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                ],
                "name": "div",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "style": undefined,
                },
                "x-attribsPrefix": Object {
                  "style": undefined,
                },
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "style": undefined,
            },
            "x-attribsPrefix": Object {
              "style": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "",
            "style": "box-sizing:border-box;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 10px",
          },
          "children": Array [],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "style": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "style": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "",
          "style": "box-sizing:border-box;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 10px",
        },
        "children": Array [],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "",
            "style": "overflow:auto;max-height:60%",
          },
          "children": Array [
            Object {
              "attribs": Object {
                "style": "position:relative",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "style": "-ms-transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);transform:translate3d(0px, 0px, 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {},
                      "children": Array [],
                      "name": "div",
                      "namespace": "http://www.w3.org/1999/xhtml",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                  ],
                  "name": "div",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "style": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "style": undefined,
                  },
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "style": undefined,
              },
              "x-attribsPrefix": Object {
                "style": undefined,
              },
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "style": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "style": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`AzScroller with all optional props except classNames is shallow rendering according to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AzScroller
    alphabetListClassNames={Array []}
    alphabetListStyle={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "20px 10px",
        "width": "100%",
      }
    }
    letterClassNames={Array []}
    letterHighlightedClassNames={Array []}
    letterHighlightedStyle={
      Object {
        "color": "blue",
      }
    }
    letterStyle={
      Object {
        "outline": "none",
      }
    }
    list={
      Array [
        Object {
          "header": Object {
            "letter": "A",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "ABEL",
            },
            Object {
              "text": "ABRAHAM",
            },
            Object {
              "text": "ACHILLE",
            },
            Object {
              "text": "ADAM",
            },
            Object {
              "text": "ADÈLE",
            },
            Object {
              "text": "ADELINE",
            },
            Object {
              "text": "ADOLPHE",
            },
            Object {
              "text": "ANTOINE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "B",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "BAPTISTE",
            },
            Object {
              "text": "BARBARA",
            },
            Object {
              "text": "BARNABÉ",
            },
            Object {
              "text": "BARTHÉLÉMY",
            },
            Object {
              "text": "BASILE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "C",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "CERISE",
            },
            Object {
              "text": "CÉSAIRE",
            },
            Object {
              "text": "CHARLES",
            },
            Object {
              "text": "CHARLOT",
            },
            Object {
              "text": "CHRISTIAN",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "E",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "ESTELLE",
            },
            Object {
              "text": "ETHAN",
            },
            Object {
              "text": "ÉTIENNE",
            },
            Object {
              "text": "EUGÈNE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "M",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "MICHÈLE",
            },
            Object {
              "text": "MOROINE",
            },
            Object {
              "text": "MURIELLE",
            },
            Object {
              "text": "MYLÈNE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "S",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "SEBASTIAN",
            },
            Object {
              "text": "SEREN",
            },
            Object {
              "text": "STANLEY",
            },
            Object {
              "text": "STÉPHANE",
            },
            Object {
              "text": "SYBILLE",
            },
            Object {
              "text": "SYLVAIN",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "W",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "WANDY",
            },
            Object {
              "text": "WAN",
            },
            Object {
              "text": "WREN",
            },
            Object {
              "text": "WILGELM",
            },
            Object {
              "text": "WADE",
            },
            Object {
              "text": "WILLIAM",
            },
            Object {
              "text": "WINOC",
            },
          ],
        },
      ]
    }
    listClassNames={Array []}
    listStyle={
      Object {
        "maxHeight": "60%",
        "overflow": "auto",
      }
    }
    renderSectionHeader={[Function]}
    renderSectionItem={[Function]}
    sectionHeaderHeight={100}
    sectionItemHeight={60}
    shouldShowSectionHeaders={true}
    wrapperClassNames={Array []}
    wrapperStyle={
      Object {
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "height": "900px",
        "justifyContent": "space-between",
        "width": "200px",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className=""
          onScroll={[Function]}
          style={
            Object {
              "maxHeight": "60%",
              "overflow": "auto",
            }
          }
        >
          <ReactList
            axis="y"
            itemRenderer={[Function]}
            itemSizeGetter={[Function]}
            itemsRenderer={[Function]}
            length={46}
            minSize={1}
            pageSize={10}
            scrollParentGetter={[Function]}
            scrollParentViewportSizeGetter={[Function]}
            threshold={100}
            type="variable"
            useStaticSize={false}
            useTranslate3d={true}
          />
        </div>,
        <AlphabeticList
          alphabetListClassNames={Array []}
          alphabetListStyle={
            Object {
              "alignItems": "center",
              "boxSizing": "border-box",
              "display": "flex",
              "justifyContent": "space-between",
              "padding": "20px 10px",
              "width": "100%",
            }
          }
          letterClassNames={Array []}
          letterHighlightedClassNames={Array []}
          letterHighlightedStyle={
            Object {
              "color": "blue",
            }
          }
          letterIndexesMapping={
            Object {
              "A": 0,
              "B": 9,
              "C": 15,
              "E": 21,
              "M": 26,
              "S": 31,
              "W": 38,
            }
          }
          letterStyle={
            Object {
              "outline": "none",
            }
          }
          letterToHighlight={null}
          onLetterClicked={[Function]}
        />,
      ],
      "className": "",
      "style": Object {
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "height": "900px",
        "justifyContent": "space-between",
        "width": "200px",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ReactList
            axis="y"
            itemRenderer={[Function]}
            itemSizeGetter={[Function]}
            itemsRenderer={[Function]}
            length={46}
            minSize={1}
            pageSize={10}
            scrollParentGetter={[Function]}
            scrollParentViewportSizeGetter={[Function]}
            threshold={100}
            type="variable"
            useStaticSize={false}
            useTranslate3d={true}
          />,
          "className": "",
          "onScroll": [Function],
          "style": Object {
            "maxHeight": "60%",
            "overflow": "auto",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "axis": "y",
            "itemRenderer": [Function],
            "itemSizeGetter": [Function],
            "itemsRenderer": [Function],
            "length": 46,
            "minSize": 1,
            "pageSize": 10,
            "scrollParentGetter": [Function],
            "scrollParentViewportSizeGetter": [Function],
            "threshold": 100,
            "type": "variable",
            "useStaticSize": false,
            "useTranslate3d": true,
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alphabetListClassNames": Array [],
          "alphabetListStyle": Object {
            "alignItems": "center",
            "boxSizing": "border-box",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "20px 10px",
            "width": "100%",
          },
          "letterClassNames": Array [],
          "letterHighlightedClassNames": Array [],
          "letterHighlightedStyle": Object {
            "color": "blue",
          },
          "letterIndexesMapping": Object {
            "A": 0,
            "B": 9,
            "C": 15,
            "E": 21,
            "M": 26,
            "S": 31,
            "W": 38,
          },
          "letterStyle": Object {
            "outline": "none",
          },
          "letterToHighlight": null,
          "onLetterClicked": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className=""
            onScroll={[Function]}
            style={
              Object {
                "maxHeight": "60%",
                "overflow": "auto",
              }
            }
          >
            <ReactList
              axis="y"
              itemRenderer={[Function]}
              itemSizeGetter={[Function]}
              itemsRenderer={[Function]}
              length={46}
              minSize={1}
              pageSize={10}
              scrollParentGetter={[Function]}
              scrollParentViewportSizeGetter={[Function]}
              threshold={100}
              type="variable"
              useStaticSize={false}
              useTranslate3d={true}
            />
          </div>,
          <AlphabeticList
            alphabetListClassNames={Array []}
            alphabetListStyle={
              Object {
                "alignItems": "center",
                "boxSizing": "border-box",
                "display": "flex",
                "justifyContent": "space-between",
                "padding": "20px 10px",
                "width": "100%",
              }
            }
            letterClassNames={Array []}
            letterHighlightedClassNames={Array []}
            letterHighlightedStyle={
              Object {
                "color": "blue",
              }
            }
            letterIndexesMapping={
              Object {
                "A": 0,
                "B": 9,
                "C": 15,
                "E": 21,
                "M": 26,
                "S": 31,
                "W": 38,
              }
            }
            letterStyle={
              Object {
                "outline": "none",
              }
            }
            letterToHighlight={null}
            onLetterClicked={[Function]}
          />,
        ],
        "className": "",
        "style": Object {
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": "900px",
          "justifyContent": "space-between",
          "width": "200px",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ReactList
              axis="y"
              itemRenderer={[Function]}
              itemSizeGetter={[Function]}
              itemsRenderer={[Function]}
              length={46}
              minSize={1}
              pageSize={10}
              scrollParentGetter={[Function]}
              scrollParentViewportSizeGetter={[Function]}
              threshold={100}
              type="variable"
              useStaticSize={false}
              useTranslate3d={true}
            />,
            "className": "",
            "onScroll": [Function],
            "style": Object {
              "maxHeight": "60%",
              "overflow": "auto",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "axis": "y",
              "itemRenderer": [Function],
              "itemSizeGetter": [Function],
              "itemsRenderer": [Function],
              "length": 46,
              "minSize": 1,
              "pageSize": 10,
              "scrollParentGetter": [Function],
              "scrollParentViewportSizeGetter": [Function],
              "threshold": 100,
              "type": "variable",
              "useStaticSize": false,
              "useTranslate3d": true,
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alphabetListClassNames": Array [],
            "alphabetListStyle": Object {
              "alignItems": "center",
              "boxSizing": "border-box",
              "display": "flex",
              "justifyContent": "space-between",
              "padding": "20px 10px",
              "width": "100%",
            },
            "letterClassNames": Array [],
            "letterHighlightedClassNames": Array [],
            "letterHighlightedStyle": Object {
              "color": "blue",
            },
            "letterIndexesMapping": Object {
              "A": 0,
              "B": 9,
              "C": 15,
              "E": 21,
              "M": 26,
              "S": 31,
              "W": 38,
            },
            "letterStyle": Object {
              "outline": "none",
            },
            "letterToHighlight": null,
            "onLetterClicked": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`AzScroller with empty list is rendering according to snapshot 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "",
      "style": "box-sizing:border-box;width:500px;height:500px;display:flex;flex-direction:column;justify-content:space-between",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "",
          "style": "overflow:auto;max-height:80%",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "style": "position:relative",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "style": "-ms-transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);transform:translate3d(0px, 0px, 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {},
                    "children": Array [],
                    "name": "div",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                ],
                "name": "div",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "style": undefined,
                },
                "x-attribsPrefix": Object {
                  "style": undefined,
                },
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "style": undefined,
            },
            "x-attribsPrefix": Object {
              "style": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "",
            "style": "box-sizing:border-box;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 10px",
          },
          "children": Array [],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "style": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "style": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "",
          "style": "box-sizing:border-box;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 10px",
        },
        "children": Array [],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "",
            "style": "overflow:auto;max-height:80%",
          },
          "children": Array [
            Object {
              "attribs": Object {
                "style": "position:relative",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "style": "-ms-transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);transform:translate3d(0px, 0px, 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {},
                      "children": Array [],
                      "name": "div",
                      "namespace": "http://www.w3.org/1999/xhtml",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                  ],
                  "name": "div",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "style": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "style": undefined,
                  },
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "style": undefined,
              },
              "x-attribsPrefix": Object {
                "style": undefined,
              },
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "style": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "style": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`AzScroller with empty list is shallow rendering according to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AzScroller
    alphabetListClassNames={Array []}
    alphabetListStyle={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "20px 10px",
        "width": "100%",
      }
    }
    letterClassNames={Array []}
    letterHighlightedClassNames={Array []}
    letterHighlightedStyle={
      Object {
        "color": "red",
        "fontWeight": "bold",
      }
    }
    letterStyle={
      Object {
        "outline": "none",
      }
    }
    list={Array []}
    listClassNames={Array []}
    listStyle={
      Object {
        "maxHeight": "80%",
        "overflow": "auto",
      }
    }
    renderSectionHeader={[Function]}
    renderSectionItem={[Function]}
    sectionHeaderHeight={null}
    sectionItemHeight={null}
    shouldShowSectionHeaders={false}
    wrapperClassNames={Array []}
    wrapperStyle={
      Object {
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "height": "500px",
        "justifyContent": "space-between",
        "width": "500px",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className=""
          onScroll={[Function]}
          style={
            Object {
              "maxHeight": "80%",
              "overflow": "auto",
            }
          }
        >
          <ReactList
            axis="y"
            itemRenderer={[Function]}
            itemSizeGetter={null}
            itemsRenderer={[Function]}
            length={0}
            minSize={1}
            pageSize={10}
            scrollParentGetter={[Function]}
            scrollParentViewportSizeGetter={[Function]}
            threshold={100}
            type="uniform"
            useStaticSize={false}
            useTranslate3d={true}
          />
        </div>,
        <AlphabeticList
          alphabetListClassNames={Array []}
          alphabetListStyle={
            Object {
              "alignItems": "center",
              "boxSizing": "border-box",
              "display": "flex",
              "justifyContent": "space-between",
              "padding": "20px 10px",
              "width": "100%",
            }
          }
          letterClassNames={Array []}
          letterHighlightedClassNames={Array []}
          letterHighlightedStyle={
            Object {
              "color": "red",
              "fontWeight": "bold",
            }
          }
          letterIndexesMapping={Object {}}
          letterStyle={
            Object {
              "outline": "none",
            }
          }
          letterToHighlight={null}
          onLetterClicked={[Function]}
        />,
      ],
      "className": "",
      "style": Object {
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "height": "500px",
        "justifyContent": "space-between",
        "width": "500px",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ReactList
            axis="y"
            itemRenderer={[Function]}
            itemSizeGetter={null}
            itemsRenderer={[Function]}
            length={0}
            minSize={1}
            pageSize={10}
            scrollParentGetter={[Function]}
            scrollParentViewportSizeGetter={[Function]}
            threshold={100}
            type="uniform"
            useStaticSize={false}
            useTranslate3d={true}
          />,
          "className": "",
          "onScroll": [Function],
          "style": Object {
            "maxHeight": "80%",
            "overflow": "auto",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "axis": "y",
            "itemRenderer": [Function],
            "itemSizeGetter": null,
            "itemsRenderer": [Function],
            "length": 0,
            "minSize": 1,
            "pageSize": 10,
            "scrollParentGetter": [Function],
            "scrollParentViewportSizeGetter": [Function],
            "threshold": 100,
            "type": "uniform",
            "useStaticSize": false,
            "useTranslate3d": true,
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alphabetListClassNames": Array [],
          "alphabetListStyle": Object {
            "alignItems": "center",
            "boxSizing": "border-box",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "20px 10px",
            "width": "100%",
          },
          "letterClassNames": Array [],
          "letterHighlightedClassNames": Array [],
          "letterHighlightedStyle": Object {
            "color": "red",
            "fontWeight": "bold",
          },
          "letterIndexesMapping": Object {},
          "letterStyle": Object {
            "outline": "none",
          },
          "letterToHighlight": null,
          "onLetterClicked": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className=""
            onScroll={[Function]}
            style={
              Object {
                "maxHeight": "80%",
                "overflow": "auto",
              }
            }
          >
            <ReactList
              axis="y"
              itemRenderer={[Function]}
              itemSizeGetter={null}
              itemsRenderer={[Function]}
              length={0}
              minSize={1}
              pageSize={10}
              scrollParentGetter={[Function]}
              scrollParentViewportSizeGetter={[Function]}
              threshold={100}
              type="uniform"
              useStaticSize={false}
              useTranslate3d={true}
            />
          </div>,
          <AlphabeticList
            alphabetListClassNames={Array []}
            alphabetListStyle={
              Object {
                "alignItems": "center",
                "boxSizing": "border-box",
                "display": "flex",
                "justifyContent": "space-between",
                "padding": "20px 10px",
                "width": "100%",
              }
            }
            letterClassNames={Array []}
            letterHighlightedClassNames={Array []}
            letterHighlightedStyle={
              Object {
                "color": "red",
                "fontWeight": "bold",
              }
            }
            letterIndexesMapping={Object {}}
            letterStyle={
              Object {
                "outline": "none",
              }
            }
            letterToHighlight={null}
            onLetterClicked={[Function]}
          />,
        ],
        "className": "",
        "style": Object {
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": "500px",
          "justifyContent": "space-between",
          "width": "500px",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ReactList
              axis="y"
              itemRenderer={[Function]}
              itemSizeGetter={null}
              itemsRenderer={[Function]}
              length={0}
              minSize={1}
              pageSize={10}
              scrollParentGetter={[Function]}
              scrollParentViewportSizeGetter={[Function]}
              threshold={100}
              type="uniform"
              useStaticSize={false}
              useTranslate3d={true}
            />,
            "className": "",
            "onScroll": [Function],
            "style": Object {
              "maxHeight": "80%",
              "overflow": "auto",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "axis": "y",
              "itemRenderer": [Function],
              "itemSizeGetter": null,
              "itemsRenderer": [Function],
              "length": 0,
              "minSize": 1,
              "pageSize": 10,
              "scrollParentGetter": [Function],
              "scrollParentViewportSizeGetter": [Function],
              "threshold": 100,
              "type": "uniform",
              "useStaticSize": false,
              "useTranslate3d": true,
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alphabetListClassNames": Array [],
            "alphabetListStyle": Object {
              "alignItems": "center",
              "boxSizing": "border-box",
              "display": "flex",
              "justifyContent": "space-between",
              "padding": "20px 10px",
              "width": "100%",
            },
            "letterClassNames": Array [],
            "letterHighlightedClassNames": Array [],
            "letterHighlightedStyle": Object {
              "color": "red",
              "fontWeight": "bold",
            },
            "letterIndexesMapping": Object {},
            "letterStyle": Object {
              "outline": "none",
            },
            "letterToHighlight": null,
            "onLetterClicked": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`AzScroller with example list is rendering according to snapshot 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "",
      "style": "box-sizing:border-box;width:500px;height:500px;display:flex;flex-direction:column;justify-content:space-between",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "",
          "style": "overflow:auto;max-height:80%",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "style": "position:relative",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "style": "-ms-transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);transform:translate3d(0px, 0px, 0)",
                },
                "children": Array [
                  Object {
                    "attribs": Object {},
                    "children": Array [],
                    "name": "div",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                ],
                "name": "div",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "style": undefined,
                },
                "x-attribsPrefix": Object {
                  "style": undefined,
                },
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "style": undefined,
            },
            "x-attribsPrefix": Object {
              "style": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "",
            "style": "box-sizing:border-box;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 10px",
          },
          "children": Array [],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "style": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "style": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "",
          "style": "box-sizing:border-box;width:100%;display:flex;justify-content:space-between;align-items:center;padding:20px 10px",
        },
        "children": Array [],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "",
            "style": "overflow:auto;max-height:80%",
          },
          "children": Array [
            Object {
              "attribs": Object {
                "style": "position:relative",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "style": "-ms-transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);transform:translate3d(0px, 0px, 0)",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {},
                      "children": Array [],
                      "name": "div",
                      "namespace": "http://www.w3.org/1999/xhtml",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                  ],
                  "name": "div",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "style": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "style": undefined,
                  },
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "style": undefined,
              },
              "x-attribsPrefix": Object {
                "style": undefined,
              },
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "style": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "style": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`AzScroller with example list is shallow rendering according to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AzScroller
    alphabetListClassNames={Array []}
    alphabetListStyle={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "20px 10px",
        "width": "100%",
      }
    }
    letterClassNames={Array []}
    letterHighlightedClassNames={Array []}
    letterHighlightedStyle={
      Object {
        "color": "red",
        "fontWeight": "bold",
      }
    }
    letterStyle={
      Object {
        "outline": "none",
      }
    }
    list={
      Array [
        Object {
          "header": Object {
            "letter": "A",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "ABEL",
            },
            Object {
              "text": "ABRAHAM",
            },
            Object {
              "text": "ACHILLE",
            },
            Object {
              "text": "ADAM",
            },
            Object {
              "text": "ADÈLE",
            },
            Object {
              "text": "ADELINE",
            },
            Object {
              "text": "ADOLPHE",
            },
            Object {
              "text": "ANTOINE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "B",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "BAPTISTE",
            },
            Object {
              "text": "BARBARA",
            },
            Object {
              "text": "BARNABÉ",
            },
            Object {
              "text": "BARTHÉLÉMY",
            },
            Object {
              "text": "BASILE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "C",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "CERISE",
            },
            Object {
              "text": "CÉSAIRE",
            },
            Object {
              "text": "CHARLES",
            },
            Object {
              "text": "CHARLOT",
            },
            Object {
              "text": "CHRISTIAN",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "E",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "ESTELLE",
            },
            Object {
              "text": "ETHAN",
            },
            Object {
              "text": "ÉTIENNE",
            },
            Object {
              "text": "EUGÈNE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "M",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "MICHÈLE",
            },
            Object {
              "text": "MOROINE",
            },
            Object {
              "text": "MURIELLE",
            },
            Object {
              "text": "MYLÈNE",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "S",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "SEBASTIAN",
            },
            Object {
              "text": "SEREN",
            },
            Object {
              "text": "STANLEY",
            },
            Object {
              "text": "STÉPHANE",
            },
            Object {
              "text": "SYBILLE",
            },
            Object {
              "text": "SYLVAIN",
            },
          ],
        },
        Object {
          "header": Object {
            "letter": "W",
            "type": "SectionHeader",
          },
          "items": Array [
            Object {
              "text": "WANDY",
            },
            Object {
              "text": "WAN",
            },
            Object {
              "text": "WREN",
            },
            Object {
              "text": "WILGELM",
            },
            Object {
              "text": "WADE",
            },
            Object {
              "text": "WILLIAM",
            },
            Object {
              "text": "WINOC",
            },
          ],
        },
      ]
    }
    listClassNames={Array []}
    listStyle={
      Object {
        "maxHeight": "80%",
        "overflow": "auto",
      }
    }
    renderSectionHeader={[Function]}
    renderSectionItem={[Function]}
    sectionHeaderHeight={null}
    sectionItemHeight={null}
    shouldShowSectionHeaders={false}
    wrapperClassNames={Array []}
    wrapperStyle={
      Object {
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "height": "500px",
        "justifyContent": "space-between",
        "width": "500px",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className=""
          onScroll={[Function]}
          style={
            Object {
              "maxHeight": "80%",
              "overflow": "auto",
            }
          }
        >
          <ReactList
            axis="y"
            itemRenderer={[Function]}
            itemSizeGetter={null}
            itemsRenderer={[Function]}
            length={39}
            minSize={1}
            pageSize={10}
            scrollParentGetter={[Function]}
            scrollParentViewportSizeGetter={[Function]}
            threshold={100}
            type="uniform"
            useStaticSize={false}
            useTranslate3d={true}
          />
        </div>,
        <AlphabeticList
          alphabetListClassNames={Array []}
          alphabetListStyle={
            Object {
              "alignItems": "center",
              "boxSizing": "border-box",
              "display": "flex",
              "justifyContent": "space-between",
              "padding": "20px 10px",
              "width": "100%",
            }
          }
          letterClassNames={Array []}
          letterHighlightedClassNames={Array []}
          letterHighlightedStyle={
            Object {
              "color": "red",
              "fontWeight": "bold",
            }
          }
          letterIndexesMapping={
            Object {
              "A": 0,
              "B": 8,
              "C": 13,
              "E": 18,
              "M": 22,
              "S": 26,
              "W": 32,
            }
          }
          letterStyle={
            Object {
              "outline": "none",
            }
          }
          letterToHighlight={null}
          onLetterClicked={[Function]}
        />,
      ],
      "className": "",
      "style": Object {
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "height": "500px",
        "justifyContent": "space-between",
        "width": "500px",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ReactList
            axis="y"
            itemRenderer={[Function]}
            itemSizeGetter={null}
            itemsRenderer={[Function]}
            length={39}
            minSize={1}
            pageSize={10}
            scrollParentGetter={[Function]}
            scrollParentViewportSizeGetter={[Function]}
            threshold={100}
            type="uniform"
            useStaticSize={false}
            useTranslate3d={true}
          />,
          "className": "",
          "onScroll": [Function],
          "style": Object {
            "maxHeight": "80%",
            "overflow": "auto",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "axis": "y",
            "itemRenderer": [Function],
            "itemSizeGetter": null,
            "itemsRenderer": [Function],
            "length": 39,
            "minSize": 1,
            "pageSize": 10,
            "scrollParentGetter": [Function],
            "scrollParentViewportSizeGetter": [Function],
            "threshold": 100,
            "type": "uniform",
            "useStaticSize": false,
            "useTranslate3d": true,
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alphabetListClassNames": Array [],
          "alphabetListStyle": Object {
            "alignItems": "center",
            "boxSizing": "border-box",
            "display": "flex",
            "justifyContent": "space-between",
            "padding": "20px 10px",
            "width": "100%",
          },
          "letterClassNames": Array [],
          "letterHighlightedClassNames": Array [],
          "letterHighlightedStyle": Object {
            "color": "red",
            "fontWeight": "bold",
          },
          "letterIndexesMapping": Object {
            "A": 0,
            "B": 8,
            "C": 13,
            "E": 18,
            "M": 22,
            "S": 26,
            "W": 32,
          },
          "letterStyle": Object {
            "outline": "none",
          },
          "letterToHighlight": null,
          "onLetterClicked": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className=""
            onScroll={[Function]}
            style={
              Object {
                "maxHeight": "80%",
                "overflow": "auto",
              }
            }
          >
            <ReactList
              axis="y"
              itemRenderer={[Function]}
              itemSizeGetter={null}
              itemsRenderer={[Function]}
              length={39}
              minSize={1}
              pageSize={10}
              scrollParentGetter={[Function]}
              scrollParentViewportSizeGetter={[Function]}
              threshold={100}
              type="uniform"
              useStaticSize={false}
              useTranslate3d={true}
            />
          </div>,
          <AlphabeticList
            alphabetListClassNames={Array []}
            alphabetListStyle={
              Object {
                "alignItems": "center",
                "boxSizing": "border-box",
                "display": "flex",
                "justifyContent": "space-between",
                "padding": "20px 10px",
                "width": "100%",
              }
            }
            letterClassNames={Array []}
            letterHighlightedClassNames={Array []}
            letterHighlightedStyle={
              Object {
                "color": "red",
                "fontWeight": "bold",
              }
            }
            letterIndexesMapping={
              Object {
                "A": 0,
                "B": 8,
                "C": 13,
                "E": 18,
                "M": 22,
                "S": 26,
                "W": 32,
              }
            }
            letterStyle={
              Object {
                "outline": "none",
              }
            }
            letterToHighlight={null}
            onLetterClicked={[Function]}
          />,
        ],
        "className": "",
        "style": Object {
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": "500px",
          "justifyContent": "space-between",
          "width": "500px",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ReactList
              axis="y"
              itemRenderer={[Function]}
              itemSizeGetter={null}
              itemsRenderer={[Function]}
              length={39}
              minSize={1}
              pageSize={10}
              scrollParentGetter={[Function]}
              scrollParentViewportSizeGetter={[Function]}
              threshold={100}
              type="uniform"
              useStaticSize={false}
              useTranslate3d={true}
            />,
            "className": "",
            "onScroll": [Function],
            "style": Object {
              "maxHeight": "80%",
              "overflow": "auto",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "axis": "y",
              "itemRenderer": [Function],
              "itemSizeGetter": null,
              "itemsRenderer": [Function],
              "length": 39,
              "minSize": 1,
              "pageSize": 10,
              "scrollParentGetter": [Function],
              "scrollParentViewportSizeGetter": [Function],
              "threshold": 100,
              "type": "uniform",
              "useStaticSize": false,
              "useTranslate3d": true,
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alphabetListClassNames": Array [],
            "alphabetListStyle": Object {
              "alignItems": "center",
              "boxSizing": "border-box",
              "display": "flex",
              "justifyContent": "space-between",
              "padding": "20px 10px",
              "width": "100%",
            },
            "letterClassNames": Array [],
            "letterHighlightedClassNames": Array [],
            "letterHighlightedStyle": Object {
              "color": "red",
              "fontWeight": "bold",
            },
            "letterIndexesMapping": Object {
              "A": 0,
              "B": 8,
              "C": 13,
              "E": 18,
              "M": 22,
              "S": 26,
              "W": 32,
            },
            "letterStyle": Object {
              "outline": "none",
            },
            "letterToHighlight": null,
            "onLetterClicked": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
